--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "ioredis": "^5.3.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
     "redis": "^4.6.4"
