--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "ms_syaifudinalkatiri_betest",
   "version": "1.0.0",
-  "description": "",
+  "description": "Middleware Authentication using JWT, and Redis Caching CRUD using Expres and MongoDB",
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -20,5 +21,6 @@
     "mongodb": "^5.1.0",
     "mongoose": "^6.9.0",
     "redis": "^4.6.4"
-  }
+  },
+  "devDependencies": {}
 }
